# standardpaths

./: .gitignore  LICENSE  README.md  pyproject.toml
src/standardpaths/: __init__.py  dirs.py
